--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+remapping = ['@openzepplin/contracts=lib/openzepplin-contracts/contracts']
+ffi = true
+              
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
